--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,18 +1,19 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
+@import url('https://fonts.googleapis.com/css?family=Mukta');
 
-$primaryColor: #2861B0;
+$primaryColor: #1B1B1D;
 
 .main-page {
     background: $primaryColor; 
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Mukta', serif;
 }
 
 .navbar {
-    background-color: transparent;
+    background-color: #A20000;
     position: relative;
     border: 0;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-bottom: 0;
 }
 .addBg {
     background-color: #ffffff;
@@ -34,6 +35,7 @@ $primaryColor: #2861B0;
         }
         a{
             color: #ffffff !important;
+            font-size: 16px !important;
         }
     }
 }
@@ -93,11 +95,11 @@ $primaryColor: #2861B0;
 }
 
 .featuredGames {
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 60px;
     
     .section-title {
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         color: #ffffff;
         font-size: 40px;
         font-weight: 500;
@@ -157,5 +159,24 @@ $primaryColor: #2861B0;
             font-weight: lighter;
             letter-spacing: 1px;
         }
+    }
+}
+
+.btn {
+    font-size: 20px;
+    text-transform: capitalize;
+    background-color: #A20000;
+    color: #fff;
+}
+
+.carousel-caption {
+    bottom: 60px;
+    
+    h2 {
+        font-size: 38px;
+    }
+    p {
+        font-size: 18px;
+        
     }
 }
