--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,6 +21,7 @@ $primaryColor: #364857;
 }
 .navbar-brand {
     background-image: url(../../dist/img/logo.png);
+    background-repeat: no-repeat;
     text-indent: -9999px;
     width: 202px;
     height: 50px;
@@ -122,7 +123,7 @@ $primaryColor: #364857;
         
         .card {
             background-color: #ffffff;
-            min-height: 350px;
+            min-height: 340px;
             overflow: hidden;
             display: block;
             box-shadow: 2px 4px 10px #334252;
@@ -132,6 +133,7 @@ $primaryColor: #364857;
                 color: #143057;
                 font-size: 30px;
                 font-weight: 500;
+                text-transform: capitalize;
                 padding-left: 10px;
                 padding-right: 10px;
                 padding-bottom: 10px;
@@ -184,6 +186,12 @@ $primaryColor: #364857;
     color: #ffffff;
     background-color: #FC6E5E;
     box-shadow: 0 1px 10px #888888;
+}
+.btn-playGame:focus {
+    color: #ffffff;
+    background-color: #FC6E5E;
+    box-shadow: 0 1px 10px #888888;
+    outline: none;
 }
 .btn-signUp {
     letter-spacing: 1px;
