--- a/scss/main.scss
+++ b/scss/main.scss
@@ -119,12 +119,18 @@ $primaryColor: #364857;
         
         .card-col {
             margin-top: 30px;
-            
+        
             &:hover {
                 
                 .card {
-                    background-color: #f5f5f5;
+                    box-shadow: 3px 4px 10px #666666;
                     text-decoration: none;
+                }
+            }
+            .gameImg {
+
+                img {
+                    width: 100%;
                 }
             }
         }
@@ -134,8 +140,17 @@ $primaryColor: #364857;
             min-height: 340px;
             overflow: hidden;
             display: block;
-            box-shadow: 2px 4px 10px #334252;
+            box-shadow: 2px 2px 10px #666666;
+            transition: box-shadow 0.5s ease-out;
             
+            &:hover {
+                box-shadow: 4px 4px 10px #2f2b2b;
+                text-decoration: none;
+            }
+            &:focus {
+                box-shadow: 4px 4px 10px #2f2b2b;
+                text-decoration: none;
+            }
             .gameName {
                 text-align: center;
                 color: #143057;
